Add project url

--- a/src/BunnyCdn/BunnyCdn.csproj
+++ b/src/BunnyCdn/BunnyCdn.csproj
@@ -12,6 +12,7 @@
     <PackageId>BunnyCdn</PackageId>
     <PackageTags>bunnycdn async netstandard</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/carbon/BunnyCdn</PackageProjectUrl>
   </PropertyGroup>
   
   <ItemGroup>
