--- a/src/BunnyCdn/BunnyCdn.csproj
+++ b/src/BunnyCdn/BunnyCdn.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <AssemblyName>BunnyCdn</AssemblyName>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.11.0</Version>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <Version>0.12.0</Version>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
 
@@ -16,6 +16,6 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Carbon.Json" Version="2.1.0" />
+    <PackageReference Include="System.Text.Json" Version="4.7.1" />
   </ItemGroup>
 </Project>
