--- a/src/BunnyCdn/BunnyCdn.csproj
+++ b/src/BunnyCdn/BunnyCdn.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <AssemblyName>BunnyCdn</AssemblyName>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
     <Version>0.12.0</Version>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
@@ -14,8 +14,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/carbon/BunnyCdn</PackageProjectUrl>
   </PropertyGroup>
-  
-  <ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="System.Text.Json" Version="4.7.1" />
   </ItemGroup>
 </Project>
