--- a/src/BunnyCdn/BunnyCdn.csproj
+++ b/src/BunnyCdn/BunnyCdn.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <AssemblyName>BunnyCdn</AssemblyName>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
-    <Version>0.12.0</Version>
-    <LangVersion>8</LangVersion>
+    <TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
+    <Version>0.13.0</Version>
+    <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
 
     <Authors>iamcarbon</Authors>
@@ -15,7 +15,7 @@
     <PackageProjectUrl>https://github.com/carbon/BunnyCdn</PackageProjectUrl>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <PackageReference Include="System.Text.Json" Version="4.7.1" />
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="5.0.0" />
   </ItemGroup>
 </Project>
