--- a/src/BunnyCdn/BunnyCdn.csproj
+++ b/src/BunnyCdn/BunnyCdn.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <AssemblyName>BunnyCdn</AssemblyName>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>0.17.0</Version>
+    <Version>0.17.1</Version>
     <Nullable>enable</Nullable>
 
     <Authors>iamcarbon</Authors>
     <Description>A modern API for BunnyCDN.</Description>
     <PackageId>BunnyCdn</PackageId>
-    <PackageTags>bunnycdn async netstandard</PackageTags>
+    <PackageTags>bunnycdn async</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/carbon/BunnyCdn</PackageProjectUrl>
   </PropertyGroup>
