--- a/src/BunnyCdn/BunnyCdn.csproj
+++ b/src/BunnyCdn/BunnyCdn.csproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <AssemblyName>BunnyCdn</AssemblyName>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>0.17.1</Version>
+    <Version>0.18.0</Version>
     <Nullable>enable</Nullable>
+    <LangVersion>preview</LangVersion>
 
     <Authors>iamcarbon</Authors>
     <Description>A modern API for BunnyCDN.</Description>
