--- a/src/BunnyCdn/BunnyCdn.csproj
+++ b/src/BunnyCdn/BunnyCdn.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Version>0.18.0</Version>
     <Nullable>enable</Nullable>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>11</LangVersion>
 
     <Authors>iamcarbon</Authors>
     <Description>A modern API for BunnyCDN.</Description>
