--- a/src/Bunny/Bunny.csproj
+++ b/src/Bunny/Bunny.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <AssemblyName>Bunny</AssemblyName>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Version>0.2.0</Version>
     <Nullable>enable</Nullable>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>12</LangVersion>
 
     <Authors>iamcarbon</Authors>
     <Description>A modern API for Bunny.net.</Description>
